# codevault

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/codevault/: __init__.py  __version__.py
tests/: test_version.py
