[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevault"
version = "0.1.0-alpha1"
description = "Code analysis, verification & audit tool with security, quality & reproducibility gates"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Carla Rodrigues", email = "carlabio.biomol@gmail.com"}]
license = {text = "MIT"}

dependencies = [
    "typer==0.9.0",
    "pydantic==2.4.2",
    "rich==13.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "mypy==1.5.0",
    "ruff==0.0.292",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
